# phonebook

./: CMakeLists.txt  README.md  initial-setup.json
.github/: initial-setup.py
.github/workflows/: setup.yml
examples/: CMakeLists.txt  admin.c  bedrock-config.json  client.c  server.c
include/YP/: YP-admin.h  YP-backend.h  YP-client.h  YP-common.h  YP-phonebook.h  YP-provider-handle.h  YP-server.h
include/alpha/: alpha-admin.h  alpha-backend.h  alpha-client.h  alpha-common.h  alpha-provider-handle.h  alpha-resource.h  alpha-server.h
src/: CMakeLists.txt  YP-admin.pc.in  YP-client.pc.in  YP-config.cmake.in  YP-server.pc.in  admin.c  admin.h  alpha-admin.pc.in  alpha-client.pc.in  alpha-config.cmake.in  alpha-server.pc.in  bedrock-module.c  client.c  client.h  provider.c  provider.h  types.h
src/dummy/: dummy-backend.c  dummy-backend.h
tests/: CMakeLists.txt  test-admin.cpp  test-client.cpp
